public/styles/general.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap');
html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    position: relative;
    font-family: 'Montserrat';
    line-height: 1.8em;
    word-spacing: 0.7em;
    min-height: 100vh;
    width: 100vw;
    color: black;
    padding: 0;
    margin: 0;
}

main {
    padding-bottom: 150px;
}

